--- a/MWF/Pages/Dispensary.razor
+++ b/MWF/Pages/Dispensary.razor
@@ -8,14 +8,23 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-
-        <img src="/GalaryPic/dispensary/dispensary14.jpg" alt="1" />
-        <img src="/GalaryPic/dispensary/dispensary15.jpg" alt="2" />
-        <video src="/GalaryPic/dispensary/opening6.jpg" controls></video>
-
+        <img src="/GalaryPic/dispensary/dispensary20.jpg" alt="2" />
+        <img src="/GalaryPic/dispensary/dispensary19.jpg" alt="1" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        
+        <img src="/GalaryPic/dispensary/dispensary17.jpg" alt="2" />
+        <img src="/GalaryPic/dispensary/dispensary16.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary14.jpg" alt="1" />
+        <video src="/GalaryPic/dispensary/opening6.jpg" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary18.jpg" alt="1" />
+        <video src="/GalaryPic/dispensary/video14.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary15.jpg" alt="2" />
         <img src="/GalaryPic/dispensary/dispensary10.jpg" alt="1" />
         <img src="/GalaryPic/dispensary/dispensary1.png" alt="2" />
 
