--- a/MWF/Pages/Opening.razor
+++ b/MWF/Pages/Opening.razor
@@ -8,21 +8,50 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/opening17.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/opening16.jpg" alt="" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary16.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/opening13.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/opening14.jpg" alt="" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/opening12.jpeg" alt="" />
+        <video src="/GalaryPic/dispensary/dispensary16.jpg" controls></video>
+        <video src="/GalaryPic/dispensary/video15.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/opening11.jpeg" alt="" />
+        <img src="/GalaryPic/dispensary/opening10.jpeg" alt="" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/opening7.jpeg" alt="" />
+        <img src="/GalaryPic/dispensary/opening8.jpeg" alt="" />
+        <img src="/GalaryPic/dispensary/opening9.jpeg" alt="" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/opening6.jpg" alt="" />
         <img src="/GalaryPic/dispensary/opening5.jpg" alt="2" />
-        <img src="/GalaryPic/dispensary/dispensary12.jpg" alt="3" />
-        <video src="/GalaryPic/dispensary/video opening3.mp4" controls></video>
+        <img src="/GalaryPic/dispensary/dispensary14.jpg" alt="2" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary12.jpg" alt="" />
         <video src="/GalaryPic/dispensary/opening video.mp4" controls></video>
-        <img src="/GalaryPic/dispensary/opening3.jpg" alt="2" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/dispensary/video opening3.mp4" controls></video>
+        <video src="/GalaryPic/dispensary/video opening1.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/dispensary/video opening2.mp4" controls></video>
-        <video src="/GalaryPic/dispensary/video opening1.mp4" controls></video>
         <img src="/GalaryPic/dispensary/dispensary13.jpg" alt="2" />
         <img src="/GalaryPic/dispensary/opening4.jpg" alt="1" />
-
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/dispensary/opening1.jpg" alt="1" />
         <img src="/GalaryPic/dispensary/opening2.jpg" alt="2" />
+        <img src="/GalaryPic/dispensary/opening3.jpg" alt="2" />
+
     </div>
 </div>
