--- a/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
+++ b/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
@@ -7,6 +7,12 @@
 }
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
+        <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+            <img src="/GalaryPic/Sadqa Bakra/BAKRA24.jpg" alt="1" />
+            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra.jpg" alt="1" />
+            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (1).jpg" alt="1" />
+            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (2).jpg" alt="1" />
+        </div>
         <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 January
@@ -48,10 +54,19 @@
 
 
 <div class="container">
-
-    
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/sadqabakra.jpeg" alt="1" />
+        <video src="/GalaryPic/Sadqa Bakra/video12.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/sbk.jpeg" alt="1" />
+        <img src="/GalaryPic/Sadqa Bakra/sdqa.jpg" alt="1" />
+    </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Sadqa Bakra/sb.jpg" alt="1" />
+        <img src="/GalaryPic/Sadqa Bakra/sbk.jpeg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Sadqa Bakra/sadqa bakrah.jpg" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/Sadqa Bakra 2.png" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/sadqa bakra2.jpg" alt="2" />
