--- a/MWF/Pages/Qurani Makatib.razor
+++ b/MWF/Pages/Qurani Makatib.razor
@@ -8,20 +8,33 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <img src="/GalaryPic/Qurani Makatib/QM3.jpg" alt="1" />
-        <video src="/GalaryPic/Qurani Makatib/video5.mp4" controls></video>
+        <img src="/GalaryPic/Qurani Makatib/QM6.jpg" alt="" />
+        <img src="/GalaryPic/Qurani Makatib/QM5.jpeg" alt="" />
+        <iframe src="/GalaryPic/Qurani Makatib/video11.mp4" frameborder="0"></iframe>
+
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <img src="/GalaryPic/Qurani Makatib/QM2.jpg" alt="1" />
+        <img src="/GalaryPic/Qurani Makatib/QM4.jpg" alt="" />
+        <video src="/GalaryPic/Qurani Makatib/video10.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/Qurani Makatib/video7.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video8.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video9.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/Qurani Makatib/video5.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video3.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video6.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/Qurani Makatib/video4.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video1.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video2.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-            <video src="/GalaryPic/Qurani Makatib/video4.mp4" controls></video>
-        <video src="/GalaryPic/Qurani Makatib/video1.mp4" controls></video>
-    </div>
-    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Qurani Makatib/QM1.jpg" alt="1" />
-        <video src="/GalaryPic/Qurani Makatib/video3.mp4" controls></video>
-        
+        <img src="/GalaryPic/Qurani Makatib/QM2.jpg" alt="1" />
+        <img src="/GalaryPic/Qurani Makatib/QM3.jpg" alt="1" />
     </div>
 </div>
