--- a/MWF/Pages/Well.razor
+++ b/MWF/Pages/Well.razor
@@ -5,10 +5,77 @@
 @code {
 
 }
-
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well30.jpg" alt="1" />
+        <video src="/GalaryPic/well/video24.mp4" controls></video>
+        <img src="/GalaryPic/well/well29.jpg" alt="1" />
+        <img src="/GalaryPic/well/well28.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/well/video23.mp4" controls></video>
+        <video src="/GalaryPic/well/video20.mp4" controls></video>
+        <img src="/GalaryPic/well/well27.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/well/video21.mp4" controls></video>
+        <video src="/GalaryPic/well/video22.mp4" controls></video>
+        <img src="/GalaryPic/well/well26.jpeg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/well/video19.mp4" controls></video>
+        <video src="/GalaryPic/well/video17.mp4" controls></video>
+        <video src="/GalaryPic/well/video18.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well21.jpg" alt="1" />
+        <img src="/GalaryPic/well/well17.jpg" alt="1" />
+        <img src="/GalaryPic/well/well16.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well24.jpg" alt="1" />
+        <img src="/GalaryPic/well/well23.jpg" alt="1" />
+        <img src="/GalaryPic/well/well22.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well20.jpg" alt="1" />
+        <img src="/GalaryPic/well/well19.jpg" alt="1" />
+        <img src="/GalaryPic/well/well18.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well20.jpg" alt="1" />
+        <img src="/GalaryPic/well/well19.jpg" alt="1" />
+        <img src="/GalaryPic/well/well18.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well21.jpg" alt="1" />
+        <img src="/GalaryPic/well/well17.jpg" alt="1" />
+        <img src="/GalaryPic/well/well16.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well15.jpg" alt="1" />
+        <img src="/GalaryPic/well/well14.jpg" alt="1" />
+        <video src="/GalaryPic/well/video18.mp4" controls></video>
+    </div>
+    
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/well/well9.jpg" alt="1" />
+        <video src="/GalaryPic/well/video13.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well12.jpg" alt="1" />
+        <video src="/GalaryPic/well/video14.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well13.jpg" alt="1" />
+        <video src="/GalaryPic/well/video15.mp4" controls></video>
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/well/well11.jpeg" alt="1" />
+        <video src="/GalaryPic/well/video12.mp4" controls></video>
+
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/well/video12.mp4" controls></video>
         <img src="/GalaryPic/well/well10.jpg" alt="1" />
 
@@ -17,7 +84,7 @@
         <img src="/GalaryPic/well/well7.jpg" alt="1" />
         <video src="/GalaryPic/well/video10.mp4" controls></video>
 
-    </div>
+    </div> 
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/well/well8.jpg" alt="1" />
         <video src="/GalaryPic/well/video11.mp4" controls></video>
@@ -26,15 +93,14 @@
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/well/well1.png" alt="1" />
         <video src="/GalaryPic/well/video9.mp4" controls></video>
-
+        
     </div>
-    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <img src="/GalaryPic/well/well1.png" alt="1" />
-        <video src="/GalaryPic/well/video7.mp4" controls></video>
-    </div>
-
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/well/well6.jpg" alt="1" />
+        <video src="/GalaryPic/well/video8.mp4" controls></video>
+    </div>
+
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/well/well4.jpeg" alt="1" />
         <img src="/GalaryPic/well/well5.jpeg" alt="1" />
     </div>
@@ -54,6 +120,5 @@
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/well/video5.mp4" controls></video>
         <video src="/GalaryPic/well/video6.mp4" controls></video>
-
     </div>
 </div>
