--- a/MWF/Shared/NavMenu.razor
+++ b/MWF/Shared/NavMenu.razor
@@ -98,7 +98,7 @@
 
                 </li>
                 <li class="nav-item">
-                    <a href="/gallery" class="nav-link active">Gallery</a>
+                    <a href="/Gallery" class="nav-link active">Gallery</a>
 
                 </li>
                 <li class="nav-item">
