--- a/MWF/wwwroot/css/site.css
+++ b/MWF/wwwroot/css/site.css
@@ -129,6 +129,10 @@ body {
     width: 25rem;
     height: 20rem;
 }
+.imgcard iframe {
+    width: 25rem;
+    height: 20rem;
+}
 
     .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
