30-1-2024  Video Pages With Picture

--- a/MWF/Pages/Madarsa Food.razor
+++ b/MWF/Pages/Madarsa Food.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Madarsa Food"
 
-<h3>Madarsa_Food</h3>
+<h3>Madarsa Food</h3>
 
 @code {
 
@@ -8,10 +8,15 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/food/food25.jpg" alt="2" />
+        <img src="/GalaryPic/food/food24.jpg" alt="2" />
+        <img src="/GalaryPic/food/food23.jpg" alt="2" />
         <img src="/GalaryPic/food/food22.jpg" alt="2" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/food/food19.jpg" alt="2" />
         <img src="/GalaryPic/food/food20.jpg" alt="2" />
-        <img src="/GalaryPic/food/food21.jpg" alt="2" />
+        <img src="/GalaryPic/food/foood21.jpg" alt="2" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/food/food18.jpg" alt="2" />
@@ -24,22 +29,21 @@
         <img src="/GalaryPic/food/food13.jpg" alt="2" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <video src="/GalaryPic/food/video14.mp4" controls></video>
         <img src="/GalaryPic/food/food12.jpg" alt="2" />
         <img src="/GalaryPic/food/food10.jpeg" alt="2" />
         <img src="/GalaryPic/food/food11.jpeg" alt="2" />
+        
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/food/video14.mp4" controls></video>
         <video src="/GalaryPic/food/video11.mp4" controls></video>
         <video src="/GalaryPic/food/video12.mp4" controls></video>
-    </div>
-    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/food/video13.mp4" controls></video>
         <video src="/GalaryPic/food/video10.mp4" controls></video>
-        <img src="/GalaryPic/food/food9.jpg" alt="2" />
+        <video src="/GalaryPic/food/video9.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <video src="/GalaryPic/food/video9.mp4" controls></video>
+        <img src="/GalaryPic/food/food9.jpg" alt="2" />
         <img src="/GalaryPic/food/food6.jpg" alt="2" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
