--- a/MWF/Pages/Pump.razor
+++ b/MWF/Pages/Pump.razor
@@ -8,6 +8,7 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/pump/video13.mp4" controls></video>
         <img src="/GalaryPic/pump/pump11.jpg" alt="1" />
         <img src="/GalaryPic/pump/pump9.jpeg" alt="1" />
         <img src="/GalaryPic/pump/pump12.jpg" alt="1" />
