--- a/MWF/Pages/Well.razor
+++ b/MWF/Pages/Well.razor
@@ -6,7 +6,22 @@
 
 }
 <div class="container">
+    <div class="gallery-container">
+            <!-- Video 1 -->
+            <div class="gallery-item">
+                <a href="/GalaryPic/well/video1.mp4" id="videoLink">
+                    Link
+                <img source= src="/GalaryPic/well/well7.jpg" />
+                </a>
+            </div>
+        </div>
+
+
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <video src="/GalaryPic/well/video26.mp4" controls></video>
+        <img src="/GalaryPic/well/well32.jpg" alt="1" />
+        <video src="/GalaryPic/well/video25.mp4" controls></video>
+        <img src="/GalaryPic/well/well31.jpeg" alt="1" />
         <img src="/GalaryPic/well/well30.jpg" alt="1" />
         <video src="/GalaryPic/well/video24.mp4" controls></video>
         <img src="/GalaryPic/well/well29.jpg" alt="1" />
