--- a/MWF/Pages/Qurani Makatib.razor
+++ b/MWF/Pages/Qurani Makatib.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Qurani Makatib"
 
-<h3>Qurani_Makatib</h3>
+<h3>Qurani Makatib</h3>
 
 @code {
 
@@ -10,20 +10,19 @@
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Qurani Makatib/QM6.jpg" alt="" />
         <img src="/GalaryPic/Qurani Makatib/QM5.jpeg" alt="" />
-        <iframe src="/GalaryPic/Qurani Makatib/video11.mp4" frameborder="0"></iframe>
-
+        <img src="/GalaryPic/Qurani Makatib/QM4.jpg" alt="" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <img src="/GalaryPic/Qurani Makatib/QM4.jpg" alt="" />
+        <iframe src="/GalaryPic/Qurani Makatib/video11.mp4" frameborder="0"></iframe>
         <video src="/GalaryPic/Qurani Makatib/video10.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/Qurani Makatib/video7.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video8.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video9.mp4" controls></video>
+        <video src="/GalaryPic/Qurani Makatib/video5.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <video src="/GalaryPic/Qurani Makatib/video5.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video3.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video6.mp4" controls></video>
     </div>
@@ -31,9 +30,9 @@
         <video src="/GalaryPic/Qurani Makatib/video4.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video1.mp4" controls></video>
         <video src="/GalaryPic/Qurani Makatib/video2.mp4" controls></video>
+        <img src="/GalaryPic/Qurani Makatib/QM1.jpg" alt="1" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <img src="/GalaryPic/Qurani Makatib/QM1.jpg" alt="1" />
         <img src="/GalaryPic/Qurani Makatib/QM2.jpg" alt="1" />
         <img src="/GalaryPic/Qurani Makatib/QM3.jpg" alt="1" />
     </div>
