--- a/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
+++ b/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
@@ -1,82 +1,45 @@
 ﻿@page "/Sadqa Bakra"
 
-<h3>Sadqa_Bakra</h3>
+<h3>Sadqa Bakra</h3>
 
 @code {
 
 }
-<div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-        <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-            <img src="/GalaryPic/Sadqa Bakra/BAKRA24.jpg" alt="1" />
-            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra.jpg" alt="1" />
-            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (1).jpg" alt="1" />
-            <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (2).jpg" alt="1" />
-        </div>
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                January
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                @*<strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.*@
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
-            </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
-            </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
+ 
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/SQ Jan.jpg" alt="1" />
+        <img src="/GalaryPic/Sadqa Bakra/BAKRA24.jpg" alt="1" />
+        <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra.jpg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (1).jpg" alt="1" />
+        <img src="/GalaryPic/Sadqa Bakra/SaqdaBAkra (2).jpg" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/sadqabakra.jpeg" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <video src="/GalaryPic/Sadqa Bakra/video12.mp4" controls></video>
+        <video src="/GalaryPic/Sadqa Bakra/video9.mp4" controls></video>
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Sadqa Bakra/sbk.jpeg" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/sdqa.jpg" alt="1" />
-    </div>
-    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Sadqa Bakra/sb.jpg" alt="1" />
-        <img src="/GalaryPic/Sadqa Bakra/sbk.jpeg" alt="1" />
     </div>
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/sbk.jpeg" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/sadqa bakrah.jpg" alt="1" />
         <img src="/GalaryPic/Sadqa Bakra/Sadqa Bakra 2.png" alt="1" />
+    </div>
+    <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
         <img src="/GalaryPic/Sadqa Bakra/sadqa bakra2.jpg" alt="2" />
+        <img src="/GalaryPic/Sadqa Bakra/Sadqa Bakra 1.png" alt="3" />
     </div>
 
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
-        <video src="/GalaryPic/Sadqa Bakra/video9.mp4" controls></video>
         <video src="/GalaryPic/Sadqa Bakra/video10.mp4" controls></video>
         <video src="/GalaryPic/Sadqa Bakra/video11.mp4" controls></video>
-        <img src="/GalaryPic/Sadqa Bakra/Sadqa Bakra 1.png" alt="3" />
     </div>
 
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
