--- a/MWF/Pages/ContactUs.razor
+++ b/MWF/Pages/ContactUs.razor
@@ -1,7 +1,23 @@
 ﻿@page "/ContactUs"
 
-<h3>Contact Us</h3>
+
 
 @code {
 
 }
+<style>
+    *{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    }
+    
+</style>
+
+<div class="contactcontainer">
+    <h22>Contact Us</h22>
+    <input type="text" placeholder="Name" >
+    <input type="email" placeholder="Email">
+    <textarea rows="10" placeholder="Type your comment" ></textarea>
+    <buttonsubmit>Submit</buttonsubmit>
+</div>
