--- a/MWF/Pages/_Layout.cshtml
+++ b/MWF/Pages/_Layout.cshtml
@@ -33,15 +33,10 @@
     </div> *@
 
     <script src="_framework/blazor.server.js"></script>
-    @*<footer>
-        My Footer
-    </footer>*@
-
-
-
-
+    
 </body>
 </html>
+
 
 <footer class="bg-dark text-white pt-0 pb-0">
 
@@ -51,20 +46,29 @@
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Quick Links</h5>
                 <p>
-                    <i class="bi bi-arrow-right-short"></i>  Home
-
+                    <a href="/" class="text-white" style="font-size: 15px; text-decoration:none;">
+                        <i class="bi bi-arrow-right-short"></i>  Home
+                    </a>
                 </p>
                 <p>
+                    <a href="/About" class="text-white" style="font-size: 15px;text-decoration:none;">
                     <i class="bi bi-arrow-right-short"></i>  About
+                    </a>
                 </p>
                 <p>
-                    <i class="bi bi-arrow-right-short"></i>  Gallery
+                    <a href="/Gallery" class="text-white" style="font-size: 15px;text-decoration:none;">
+                        <i class="bi bi-arrow-right-short"></i>  Gallery
+                    </a>
                 </p>
                 <p>
-                    <i class="bi bi-arrow-right-short"></i>  Review
+                    <a href="/Review" class="text-white" style="font-size: 15px;text-decoration:none;">
+                        <i class="bi bi-arrow-right-short"></i>  Review
+                    </a>
                 </p>
                 <p>
+                    <a href="/ContactUs" class="text-white" style="font-size: 15px;text-decoration:none;">
                     <i class="bi bi-arrow-right-short"></i>  Contact Us
+                    </a>
                 </p>
             </div>
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
