--- a/MWF/Pages/Gallery.razor
+++ b/MWF/Pages/Gallery.razor
@@ -5,14 +5,25 @@
 @code {
 
 }
+
     <div class="container mt-3">
         <div class="row">
         <div class="col-md-4 mb-2">
             <div class="card">
+                <img src="/GalaryPic/Ramadan Ration/Ration3.jpg" class="card-img-top" alt="Image 1" style="height:100%">
+                    <div class="card-body">
+                        <h5 class="card-title">Ramadan Ration 2024</h5>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='/Ramadan Ration';">Click Here</button>
+                    </div>
+                </div>
+            </div>
+        
+            <div class="col-md-4 mb-2">
+            <div class="card">
                 <img src="/GalaryPic/Qurani Makatib/QM1.jpg" class="card-img-top" alt="Image 1" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">Qurani Makatib</h5>
-                        <button type="button" class="btn btn-primary" onclick="window.location.href='/Qurani Makatib';">Click Here</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='/Qurani Makatib';">Click Here</button>
                     </div>
                 </div>
             </div>
@@ -34,13 +45,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-
-<div class="container mt-3">
-    <div class="row">
         <div class="col-md-4 mb-2">
             <div class="card">
                 <img src="/GalaryPic/dispensary/dispensary4.png" class="card-img-top" alt="Image 1" style="height:100%">
@@ -69,27 +73,12 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-                    
-<div class="container mt-3">
-    <div class="row">
         <div class="col-md-4 mb-2">
             <div class="card">
                 <img src="/GalaryPic/Rashan/Rashan1.jpg" class="card-img-top" alt="Image 3" style="height:100%">
                 <div class="card-body">
                     <h5 class="card-title">Monthly Rashan</h5>
                     <button type="button" class="btn btn-primary" onclick="window.location.href='/Rashan';">Click Here</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-2">
-            <div class="card">
-                <img src="/GalaryPic/aqeeqa .jpg" class="card-img-top" alt="Image 1" style="height:100%">
-                <div class="card-body">
-                    <h5 class="card-title">Aqeeqa</h5>
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='/';">Click Here</button>
                 </div>
             </div>
         </div>
@@ -102,5 +91,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mb-2">
+            <div class="card">
+                <img src="/GalaryPic/aqeeqa .jpg" class="card-img-top" alt="Image 1" style="height:100%">
+                <div class="card-body">
+                    <h5 class="card-title">Aqeeqa</h5>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='/';">Click Here</button>
+                </div>
+            </div>
+        </div>
+        
     </div>
-</div>
+    </div>
