--- a/MWF/Pages/Rashan.razor
+++ b/MWF/Pages/Rashan.razor
@@ -8,6 +8,7 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Rashan/Rashan6.jpg" alt="1" />
         <img src="/GalaryPic/Rashan/Rashan5.jpg" alt="1" />
         <img src="/GalaryPic/Rashan/Rashan1.jpg" alt="1" />
         <img src="/GalaryPic/Rashan/Rashan2.jpg" alt="1" />
