--- a/MWF/Pages/Opening.razor
+++ b/MWF/Pages/Opening.razor
@@ -8,6 +8,7 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary23.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary22.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary21.jpg" alt="" />
         <img src="/GalaryPic/dispensary/opening17.jpg" alt="" />
