--- a/MWF/Pages/Gallery.razor
+++ b/MWF/Pages/Gallery.razor
@@ -2,8 +2,13 @@
 
 <h3>Gallery</h3>
 
-@code {
+@inject NavigationManager NavigationManager
 
+@code {
+    private void NavigateToNextPage()
+    {
+        NavigationManager.NavigateTo("/Rashion2024");
+    }
 }
 
     <div class="container mt-3">
@@ -13,8 +18,8 @@
                 <img src="/GalaryPic/Ramadan Ration/Ration3.jpg" class="card-img-top" alt="Image 1" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">Ramadan Ration 2024</h5>
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='/Ramadan Ration';">Click Here</button>
-                    </div>
+                    <button type="button" class="btn btn-primary" @onclick="NavigateToNextPage">Click Here</button>
+                </div>
                 </div>
             </div>
         
