--- a/MWF/Pages/Gallery.razor
+++ b/MWF/Pages/Gallery.razor
@@ -17,7 +17,7 @@
             <div class="card">
                 <img src="/GalaryPic/Ramadan Ration/Ration3.jpg" class="card-img-top" alt="Image 1" style="height:100%">
                     <div class="card-body">
-                        <h5 class="card-title">Ramadan Ration 2024</h5>
+                        <h5 class="card-title">Ramadan 2024</h5>
                     <button type="button" class="btn btn-primary" @onclick="NavigateToNextPage">Click Here</button>
                 </div>
                 </div>
