--- a/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
+++ b/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
@@ -9,6 +9,16 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/Bakra35.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra34.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra33.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra32.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra31.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra30.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra29.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra28.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra27.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra26.jpg" alt="" />
         <img src="/GalaryPic/Sadqa Bakra/Bakra25.jpg" alt="" />
         <img src="/GalaryPic/Sadqa Bakra/Bakra1.jpg" alt="" />
         <div class="ant-ribbon-wrapper">
