--- a/MWF/Pages/Opening.razor
+++ b/MWF/Pages/Opening.razor
@@ -8,6 +8,9 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary30.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/dispensary29.png.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/dispensary28.jpg" alt="" />
         <div class="ant-ribbon-wrapper">
             <div class="ant-card ant-card-bordered media_card">
                 <div class="ant-card-body">
