--- a/MWF/Pages/_Layout.cshtml
+++ b/MWF/Pages/_Layout.cshtml
@@ -110,13 +110,13 @@
                 <p>
                     <a href="" class=" text-white" style="font-size: 15px" ;>
                         <i class="bi bi-envelope"></i>
-                        waqarhanif1985@gmail.com
+                        Info@mumtazwelfare.org
                     </a>
                 </p>
                 <p>
                     <a href="" class=" text-white" style="font-size: 15px" ;>
                         <i class="bi bi-telephone"></i>
-                        0321-2070155  &  0347-9270155
+                        0347-9270155
                     </a>
                 </p>
 
