--- a/MWF/Pages/Opening.razor
+++ b/MWF/Pages/Opening.razor
@@ -8,6 +8,7 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary31.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary30.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary29.png.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary28.jpg" alt="" />
