--- a/MWF/Pages/Rashan.razor
+++ b/MWF/Pages/Rashan.razor
@@ -8,6 +8,7 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Rashan/Rashan11.jpg" alt="1" />
         <img src="/GalaryPic/Rashan/Rashan10.jpg" alt="1" />
         <img src="/GalaryPic/Rashan/Rashan9.jpg" alt="1" />
         <div class="ant-ribbon-wrapper">
