--- a/MWF/Pages/DonationForm.razor
+++ b/MWF/Pages/DonationForm.razor
@@ -86,6 +86,8 @@
 
 <h3>Donation Form</h3>
 
+@using System.ComponentModel.DataAnnotations; 
+
 <EditForm Model="@donation" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
@@ -101,9 +103,11 @@
     </div>
 
         <div class="col-md-6">
-            <label for="Gmail">Gmail</label>
-            <InputText id="Gmail" class="form-control" @bind-Value="donation.Gmail" />
+            <label for="Email">Email </label>
+            <InputText id="Email" class="form-control" @bind-Value="donation.Email" />
+            <ValidationMessage For="@(() => donation.Email)" />
         </div>
+
         <div class="col-md-6">
             <label for="Phone_Number">Phone Number</label>
             <InputText id="Phone_Number" class="form-control" @bind-Value="donation.PhoneNumber" />
@@ -176,7 +180,8 @@
     {
         public string Rec_No { get; set; }
         public DateTime Rec_Date { get; set; }
-        public string Gmail { get; set; }
+        [EmailAddress(ErrorMessage = "Enter a valid Email address.")]
+        public string Email { get; set; }
         public string PhoneNumber { get; set; }
         public string Reference { get; set; }
         public string DonationType { get; set; }
