--- a/MWF/Pages/DonationForm.razor
+++ b/MWF/Pages/DonationForm.razor
@@ -177,7 +177,7 @@
     </div>
     </div>
 
-    <button type="submit" class="btn btn-primary" onclick="DonationList" style="text-align:center; margin-bottom: 20px;">Save</button>
+    <button type="submit" class="btn btn-primary" onclick="/DonationList" style="text-align:center; margin-bottom: 20px;">Save</button>
 </EditForm>
 
 @code {
@@ -192,7 +192,7 @@
     private void HandleValidSubmit()
     {
         //DonationService.AddDonation(donation);
-        Navigation.NavigateTo("/donationlist");
+        Navigation.NavigateTo("/DonationList");
     }
 
     public class Donation
